--- a/index.html
+++ b/index.html
@@ -11,10 +11,19 @@
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-  <script
-  src="https://code.jquery.com/jquery-3.3.1.js"
-  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-  crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128281639-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-128281639-1');
+  </script>
 </head>
 
 <body>
@@ -39,7 +48,7 @@
     </div>
   </section>
 
-  <div class="alternate-bg" >
+  <div class="alternate-bg">
     <section class="about">
       <h2 id="about">ABOUT</h2>
       <div class="about-text">
@@ -49,16 +58,20 @@
         <div id="contact">
           <p>Hi, I'm Marlo. I was raised an avid gamer thanks to my father, and (hopefully) a good cook thanks to my
             mother. Some of my other interests include full-stack pancakes, home cooking, Reddit, foreign beers, making
-            music, and snowboarding. I would love to develop a game like XCOM someday. I'm currently refining my SCSS skills and integrating Redux into my projects.</p>
-  
-          <h3 >CONTACT INFO</h3>
+            music, and snowboarding. I would love to develop a game like XCOM someday. I'm currently refining my SCSS
+            skills and integrating Redux into my projects.</p>
+
+          <h3>CONTACT INFO</h3>
           <a href="mailto:marloadriancarreon@gmail.com" target="__blank">marloadriancarreon@gmail.com</a>
           <div class="about-icons">
-            <div><a href="https://www.linkedin.com/in/carryon/" target="__blank"><img src="./assets/icons/In-2C-34px-TM.png" alt="linkedin logo"></a></div>
-            <div><a href="https://github.com/mcarreon" target="__blank"><img src="./assets/icons/GitHub-Mark-64px.png" alt="github logo"></a></div>
+            <div><a href="https://www.linkedin.com/in/carryon/" target="__blank"><img src="./assets/icons/In-2C-34px-TM.png"
+                  alt="linkedin logo"></a></div>
+            <div><a href="https://github.com/mcarreon" target="__blank"><img src="./assets/icons/GitHub-Mark-64px.png"
+                  alt="github logo"></a></div>
           </div>
           <div class="resume-btn">
-            <form action="https://docs.google.com/document/d/1J5IeK2DUdniULWG53o8cThZHcH0dCtIB4S560IzArnk/edit?usp=sharing" method="get" target="__blank">
+            <form action="https://docs.google.com/document/d/1J5IeK2DUdniULWG53o8cThZHcH0dCtIB4S560IzArnk/edit?usp=sharing"
+              method="get" target="__blank">
               <button>View My Resume</button>
             </form>
           </div>
@@ -67,7 +80,7 @@
     </section>
   </div>
 
-  <section class="skills" >
+  <section class="skills">
     <h2 id="skills">SKILLS</h2>
     <div class="skills-columns">
       <div class="skill-front">
@@ -126,12 +139,13 @@
     </div>
   </section>
 
-  <div class="alternate-bg" >
+  <div class="alternate-bg">
     <section class="portfolio">
       <h2 id="portfolio">Portfolio</h2>
       <div class="portfolio-item">
         <div class="portfolio-image">
-          <a href="https://www.marlocarreon.com/provident-primary-care/" target="__blank"><img src="./assets/imgs/ppc.jpg" alt="ppc preview" ></a>
+          <a href="https://www.marlocarreon.com/provident-primary-care/" target="__blank"><img src="./assets/imgs/ppc.jpg"
+              alt="ppc preview"></a>
         </div>
         <div class="portfolio-item-desc">
           <h4>Provident Primary Care</h4>
@@ -142,7 +156,9 @@
             <li>Built with pure HTML5, CSS3, and jQuery</li>
           </ul>
           <div class="portfolio-buttons">
-            <div><form method="get" action="https://www.marlocarreon.com/provident-primary-care" target="__blank"><button>Demo</button></form></div>
+            <div>
+              <form method="get" action="https://www.marlocarreon.com/provident-primary-care" target="__blank"><button>Demo</button></form>
+            </div>
             <div>
               <p>Private Source</p>
             </div>
@@ -156,7 +172,8 @@
         </div>
         <div class="portfolio-item-desc">
           <h4>Blitz Report</h4>
-          <p>A Fantasy Football utility webapp that allows users to track QB success rates against specific opponents. </p>
+          <p>A Fantasy Football utility webapp that allows users to track QB success rates against specific opponents.
+          </p>
           <ul>
             <li>Built with the React framework</li>
             <li>Designed and produced mockups in AdobeXD</li>
@@ -164,7 +181,9 @@
             <li>User Authentication handled with Passport and BCrypt</li>
           </ul>
           <div class="portfolio-buttons">
-            <div><form method="get" action="https://blitzreport.herokuapp.com/"  target="__blank"><button>Demo</button></form></div>
+            <div>
+              <form method="get" action="https://blitzreport.herokuapp.com/" target="__blank"><button>Demo</button></form>
+            </div>
             <div>
               <img src="" alt="">
               <a href="https://github.com/mcarreon/blitz-report-mcarreon" target="__blank">View Source</a>
@@ -186,7 +205,9 @@
             <li>User Authentication with 3 permission levels</li>
           </ul>
           <div class="portfolio-buttons">
-            <div><form method="get" action="https://vancoolproject.herokuapp.com/" target="__blank"><button>Demo</button></form></div>
+            <div>
+              <form method="get" action="https://vancoolproject.herokuapp.com/" target="__blank"><button>Demo</button></form>
+            </div>
             <div>
               <img src="" alt="">
               <a href="https://github.com/mcarreon/VanCool-mcarreon" target="__blank">View Source</a>
@@ -213,6 +234,7 @@
   </footer>
 
 
-<script src="main.js"></script>
+  <script src="main.js"></script>
 </body>
+
 </html>
