fixed scroll icon, header styling

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <a href="https://github.com/mcarreon/" target="__blank"><img src="./assets/icons/GitHub-Mark-Light-64px.png" alt=""></a>
     </div>
     <div class="scroll-icon">
-      <img src="./assets/exports/М.svg" alt="">
+      <img src="./assets/exports/М-scroll.png" alt="scroll icon">
     </div>
   </section>
 
