--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Hi, I'm Marlo. Nice to meet you. I'm a UCLA Alumni and Front-End & Back-End Developer/Designer with 5 years of programming experience. I specialize in Javascript and React, thank you for checking out my portfolio!"
+
   <link rel="icon" href="./assets/exports/M.png">
 
-  <title>Marlo Carreon</title>
+  <title>Welcome to Marlo Carreon's Portfolio, a Full-Stack Developer.</title>
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
