--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="Hi, I'm Marlo. Nice to meet you. I'm a UCLA Alumni and Front-End & Back-End Developer/Designer with 5 years of programming experience. I specialize in Javascript and React, thank you for checking out my portfolio!"
+  <meta name="description" content="Hi, I'm Marlo. Nice to meet you. I'm a UCLA Alumni and Front-End & Back-End Developer/Designer with 5 years of programming experience. I specialize in Javascript and React, thank you for checking out my portfolio!">
+  <link rel="canonical" href="https://www.marlocarreon.com/">
 
   <link rel="icon" href="./assets/exports/M.png">
 
