--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <h1>MARLO CARREON</h1>
     <p>Full-stack web developer based out of Los Angeles. I enjoy backend coding, coffee, and all things javascript.</p>
     <div>
-      <a href="https://github.com/mcarreon/" target="__blank"><img src="./assets/icons/GitHub-Mark-Light-64px.png" alt=""></a>
+      <a href="https://github.com/mcarreon/" target="__blank"><img src="./assets/icons/GitHub-Mark-Light-64px.png" alt="Marlo's GitHub"></a>
     </div>
     <div class="scroll-icon">
       <img src="./assets/exports/М-scroll.png" alt="scroll icon">
