--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="Hi, I'm Marlo. Nice to meet you. I'm a UCLA Alumni and Front-End & Back-End Developer/Designer with 5 years of programming experience. I specialize in Javascript and React, thank you for checking out my portfolio!">
+  <meta name="description" content="Hi, I'm Marlo. Nice to meet you. I'm a UCLA Alumni and Front-End & Back-End Developer/Designer with 5 years of programming experience.">
   <link rel="canonical" href="https://www.marlocarreon.com/">
 
   <link rel="icon" href="./assets/exports/M.png">
 
   <title>Welcome to Marlo Carreon's Portfolio, a Full-Stack Developer.</title>
   <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/main-min.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous"></script>
