--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 
 <body>
   <header>
-    <div class="logo"><a href="#home">Marlo Carreon</a></div>
+    <div class="logo"><a href="#home" title="Home Screen - Marlo Carreon's Portfolio">Marlo Carreon</a></div>
     <ul>
-      <li><a href="#about">About</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#portfolio">Portfolio</a></li>
+      <li><a href="#about" title="About Screen - Marlo Carreon's Portfolio">About</a></li>
+      <li><a href="#skills" title="Skills Screen - Marlo Carreon's Portfolio">Skills</a></li>
+      <li><a href="#portfolio" title="Portfolio Screen - Marlo Carreon's Portfolio">Portfolio</a></li>
     </ul>
   </header>
 
@@ -44,7 +44,7 @@
     <h1>MARLO CARREON</h1>
     <p>Full-stack web developer based out of Los Angeles. I enjoy backend coding, coffee, and all things javascript.</p>
     <div>
-      <a href="https://github.com/mcarreon/" target="__blank"><img src="./assets/icons/GitHub-Mark-Light-64px.png" alt="Marlo's GitHub"></a>
+      <a href="https://github.com/mcarreon/" target="__blank" title="Link to Marlo's GitHub Profile"><img src="./assets/icons/GitHub-Mark-Light-64px.png" alt="Marlo's GitHub"></a>
     </div>
     <div class="scroll-icon">
       <img src="./assets/exports/М-scroll.png" alt="scroll icon">
@@ -65,11 +65,11 @@
             skills and integrating Redux into my projects.</p>
 
           <h3>CONTACT INFO</h3>
-          <a href="mailto:marloadriancarreon@gmail.com" target="__blank">marloadriancarreon@gmail.com</a>
+          <a href="mailto:marloadriancarreon@gmail.com" target="__blank" title="MailTo Marlo's Email">marloadriancarreon@gmail.com</a>
           <div class="about-icons">
-            <div><a href="https://www.linkedin.com/in/carryon/" target="__blank"><img src="./assets/icons/In-2C-34px-TM.png"
+            <div><a href="https://www.linkedin.com/in/carryon/" target="__blank" title="Link to Marlo's LinkedIn Profile"><img src="./assets/icons/In-2C-34px-TM.png"
                   alt="linkedin logo"></a></div>
-            <div><a href="https://github.com/mcarreon" target="__blank"><img src="./assets/icons/GitHub-Mark-64px.png"
+            <div><a href="https://github.com/mcarreon" target="__blank" title="Link to Marlo's GitHub Profile"><img src="./assets/icons/GitHub-Mark-64px.png"
                   alt="github logo"></a></div>
           </div>
           <div class="resume-btn">
@@ -147,7 +147,7 @@
       <h2 id="portfolio">Portfolio</h2>
       <div class="portfolio-item">
         <div class="portfolio-image">
-          <a href="https://www.marlocarreon.com/provident-primary-care/" target="__blank"><img src="./assets/imgs/ppc.jpg"
+          <a href="https://www.marlocarreon.com/provident-primary-care/" target="__blank" title="Link to Provident-Primary-Care"><img src="./assets/imgs/ppc.jpg"
               alt="ppc preview"></a>
         </div>
         <div class="portfolio-item-desc">
@@ -171,7 +171,7 @@
       </div>
       <div class="portfolio-item">
         <div>
-          <a href="https://blitzreport.herokuapp.com/" target="__blank"><img src="./assets/imgs/blitz.jpg" alt="blitz report preview"></a>
+          <a href="https://blitzreport.herokuapp.com/" target="__blank" title="Link to Blitz Report"><img src="./assets/imgs/blitz.jpg" alt="blitz report preview"></a>
         </div>
         <div class="portfolio-item-desc">
           <h4>Blitz Report</h4>
@@ -189,7 +189,7 @@
             </div>
             <div>
               <img src="" alt="">
-              <a href="https://github.com/mcarreon/blitz-report-mcarreon" target="__blank">View Source</a>
+              <a href="https://github.com/mcarreon/blitz-report-mcarreon" target="__blank" title="Link to Blitz Report Github Repo">View Source</a>
             </div>
           </div>
         </div>
@@ -197,7 +197,7 @@
       </div>
       <div class="portfolio-item">
         <div>
-          <a href="https://vancoolproject.herokuapp.com/" target="__blank"><img src="./assets/imgs/vancool.jpg" alt="vancool preview"></a>
+          <a href="https://vancoolproject.herokuapp.com/" target="__blank" title="Link to Van Cool"><img src="./assets/imgs/vancool.jpg" alt="vancool preview" ></a>
         </div>
         <div class="portfolio-item-desc">
           <h4>VanCool</h4>
@@ -213,7 +213,7 @@
             </div>
             <div>
               <img src="" alt="">
-              <a href="https://github.com/mcarreon/VanCool-mcarreon" target="__blank">View Source</a>
+              <a href="https://github.com/mcarreon/VanCool-mcarreon" target="__blank" title="Link to Van Cool's Github Repo">View Source</a>
             </div>
           </div>
         </div>
@@ -225,7 +225,7 @@
         <div>
           <p>Lets chat.</p>
           <div>
-            <a href="#contact"><button>Contact</button></a>
+            <a href="#contact" title="About Screen - Marlo Carreon's Portfolio"><button>Contact</button></a>
           </div>
         </div>
       </div>
