--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <section class="skills">
     <h2 id="skills">SKILLS</h2>
     <div class="skills-columns">
-      <div class="skill-front">
+      <div class="skill-front skill-column">
         <h3>FRONT-END</h3>
         <ul>
           <li>React.js</li>
@@ -93,7 +93,7 @@
           <li>Material Design</li>
         </ul>
       </div>
-      <div class="skill-back">
+      <div class="skill-back skill-column">
         <h3>BACK-END</h3>
         <ul>
           <li>Javascript (ES6+)</li>
@@ -114,7 +114,7 @@
           <li>MLab</li>
         </ul>
       </div>
-      <div class="skill-design">
+      <div class="skill-design skill-column">
         <h3>DESIGN</h3>
         <ul>
           <li>UI/UX Design</li>
@@ -135,7 +135,7 @@
       <h2 id="portfolio">Portfolio</h2>
       <div class="portfolio-item">
         <div class="portfolio-image">
-          <a href="https://www.marlocarreon.com/provident-primary-care/" target="__blank" title="Link to Provident-Primary-Care"><img src="./assets/imgs/ppc.jpg"
+          <a href="#" title="Link to Provident-Primary-Care"><img src="./assets/imgs/ppc.jpg"
               alt="ppc preview"></a>
         </div>
         <div class="portfolio-item-desc">
@@ -148,7 +148,6 @@
           </ul>
           <div class="portfolio-buttons">
             <div>
-              <form method="get" action="https://www.marlocarreon.com/provident-primary-care" target="__blank"><button>Demo</button></form>
             </div>
             <div>
               <p>Private Source</p>
