separated portfolio section and added work sections

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <title>Welcome to Marlo Carreon's Portfolio, a Full-Stack Developer.</title>
   <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/main-min.css">
+  <link rel="stylesheet" href="./css/main-mini.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 
@@ -78,17 +78,18 @@
         <h3>FRONT-END</h3>
         <ul>
           <li>React.js</li>
+          <li>Liquid</li>
           <li>Redux</li>
           <li>SCSS</li>
           <li>jQuery</li>
           <li>Handlebars</li>
           <li>Mobile-Responsive Design</li>
-          <li>Shopify</li>
           <li>HTML5</li>
           <li>CSS3</li>
         </ul>
         <h4>Tools</h4>
         <ul>
+            <li>Shopify</li>
           <li>Bootstrap</li>
           <li>Material Design</li>
         </ul>
@@ -132,30 +133,60 @@
 
   <div class="alternate-bg">
     <section class="portfolio">
-      <h2 id="portfolio">Portfolio</h2>
+      <h2 id="portfolio-title">Portfolio</h2>
+      <h3>Work</h3>
       <div class="portfolio-item">
         <div class="portfolio-image">
-          <a href="#" title="Link to Provident-Primary-Care"><img src="./assets/imgs/ppc.jpg"
-              alt="ppc preview"></a>
+          <a href="https://stateoffashion.com/" title="Link to State of Fashion"><img src="./assets/imgs/stateoffashion.jpg"
+              alt="state of fashion preview"></a>
         </div>
         <div class="portfolio-item-desc">
-          <h4>Provident Primary Care</h4>
-          <h5>In Progress</h5>
-          <p>A website created for a Doctor's office to assist patients with finding services, locations, and
-            appointments</p>
+          <h4>State of Fashion</h4>
+          <h5>Contract Full Stack Developer</h5>
+          <p>Shopify website created from the ground up using client provided design. Created custom components for content pages with paired editing functionality from the Shopify editor. Worked with SEO specialist to increase site visibility. Installed blog and Mailchimp functionality.</p>
           <ul>
-            <li>Built with pure HTML5, CSS3, and jQuery</li>
+            <li>Built in Shopify using Liquid</li>
+            <li>Styled with SCSS</li>
+            <li>Custom components built with Javascript</li>
+            <li>Extra theme functionality created in Liquid</li>
           </ul>
           <div class="portfolio-buttons">
             <div>
+              <form method="get" action="https://blitzreport.herokuapp.com/" target="__blank"><button>Visit</button></form>
             </div>
             <div>
               <p>Private Source</p>
             </div>
           </div>
         </div>
-
       </div>
+      <div class="portfolio-item">
+          <div class="portfolio-image">
+            <a href="https://baileymoss.com/" title="Link to Bailey Moss"><img src="./assets/imgs/baileymoss.jpg"
+                alt="bailey moss preview"></a>
+          </div>
+          <div class="portfolio-item-desc">
+            <h4>Bailey Moss</h4>
+            <h5>Contract Front End Developer</h5>
+            <p>Worked on existing website to improve UI/UX. Streamlined shopping flow for users and created new page for Mommy & Me Spring collection. Revamped product pages with custom description pagination and design. Installed and customized Instagram shoppable modal.</p>
+            <ul>
+              <li>Built in Shopify using Liquid</li>
+              <li>Styled with SCSS</li>
+              <li>Custom components built with Javascript</li>
+              <li>Extra theme functionality created in Liquid</li>
+            </ul>
+            <div class="portfolio-buttons">
+              <div>
+                <form method="get" action="https://blitzreport.herokuapp.com/" target="__blank"><button>Visit</button></form>
+              </div>
+              <div>
+                <p>Private Source</p>
+              </div>
+            </div>
+          </div>
+      </div>
+
+      <h3>Projects</h3>
       <div class="portfolio-item">
         <div>
           <a href="https://blitzreport.herokuapp.com/" target="__blank" title="Link to Blitz Report"><img src="./assets/imgs/blitz.jpg" alt="blitz report preview"></a>
