fixed new work links

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           </ul>
           <div class="portfolio-buttons">
             <div>
-              <form method="get" action="https://blitzreport.herokuapp.com/" target="__blank"><button>Visit</button></form>
+              <form method="get" action="https://stateoffashion.com/" target="__blank"><button>Visit</button></form>
             </div>
             <div>
               <p>Private Source</p>
@@ -177,7 +177,7 @@
             </ul>
             <div class="portfolio-buttons">
               <div>
-                <form method="get" action="https://blitzreport.herokuapp.com/" target="__blank"><button>Visit</button></form>
+                <form method="get" action="https://baileymoss.com/" target="__blank"><button>Visit</button></form>
               </div>
               <div>
                 <p>Private Source</p>
