updated contact link and resume link

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                   alt="github logo"></a></div>
           </div>
           <div class="resume-btn">
-            <form action="https://docs.google.com/document/d/1J5IeK2DUdniULWG53o8cThZHcH0dCtIB4S560IzArnk/edit?usp=sharing"
+            <form action="https://docs.google.com/document/d/14iz1QAyxIP3p4ZVamgd0CIiXSXaQPJocRiOmSQkZ9gE/edit?usp=sharing"
               method="get" target="__blank">
               <button>View My Resume</button>
             </form>
@@ -243,7 +243,7 @@
         <div>
           <p>Lets chat.</p>
           <div>
-            <a href="#contact" title="About Screen - Marlo Carreon's Portfolio"><button>Contact</button></a>
+            <a href="mailto:marloadriancarreon@gmail.com" target="__blank" title="MailTo Marlo's Email" ><button>Contact</button></a>
           </div>
         </div>
       </div>
