fixed portfolio scrolling

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
   <div class="alternate-bg">
     <section class="portfolio">
-      <h2 id="portfolio-title">Portfolio</h2>
+      <h2 id="portfolio">Portfolio</h2>
       <h3>Work</h3>
       <div class="portfolio-item">
         <div class="portfolio-image">
