changed description bullets to icons, added img shadows, fixed button cursors, added chrome extension

--- a/index.html
+++ b/index.html
@@ -144,12 +144,11 @@
           <h4>State of Fashion</h4>
           <h5>Contract Full Stack Developer</h5>
           <p>Shopify website created from the ground up using client provided design. Created custom components for content pages with paired editing functionality from the Shopify editor. Worked with SEO specialist to increase site visibility. Installed blog and Mailchimp functionality.</p>
-          <ul>
-            <li>Built in Shopify using Liquid</li>
-            <li>Styled with SCSS</li>
-            <li>Custom components built with Javascript</li>
-            <li>Extra theme functionality created in Liquid</li>
-          </ul>
+          <div class="icons">
+            <img class="tech-icon" src="./assets/tech-icons/shopify-icon.png" alt="shopify icon"/>
+            <img class="tech-icon" src="./assets/tech-icons/sass-icon.png" alt="sass icon"/>
+            <img class="tech-icon" src="./assets/tech-icons/js-icon.png" alt="javascript icon"/>
+          </div>
           <div class="portfolio-buttons">
             <div>
               <form method="get" action="https://stateoffashion.com/" target="__blank"><button>Visit</button></form>
@@ -169,12 +168,11 @@
             <h4>Bailey Moss</h4>
             <h5>Contract Front End Developer</h5>
             <p>Worked on existing website to improve UI/UX. Streamlined shopping flow for users and created new page for Mommy & Me Spring collection. Revamped product pages with custom description pagination and design. Installed and customized Instagram shoppable modal.</p>
-            <ul>
-              <li>Built in Shopify using Liquid</li>
-              <li>Styled with SCSS</li>
-              <li>Custom components built with Javascript</li>
-              <li>Extra theme functionality created in Liquid</li>
-            </ul>
+            <div class="icons">
+              <img class="tech-icon" src="./assets/tech-icons/shopify-icon.png" alt="shopify icon"/>
+              <img class="tech-icon" src="./assets/tech-icons/sass-icon.png" alt="sass icon"/>
+              <img class="tech-icon" src="./assets/tech-icons/js-icon.png" alt="javascript icon"/>
+            </div>
             <div class="portfolio-buttons">
               <div>
                 <form method="get" action="https://baileymoss.com/" target="__blank"><button>Visit</button></form>
@@ -189,18 +187,44 @@
       <h3>Projects</h3>
       <div class="portfolio-item">
         <div>
+          <a href="https://www.marlocarreon.com/markdown-note-extension/" target="__blank" title="Link to Blitz Report"><img src="./assets/imgs/markdown-extension-screenshot.png" alt="markdown notes extention preview"></a>
+        </div>
+        <div class="portfolio-item-desc">
+          <h4>Markdown Notes Extension</h4>
+          <p>Chrome Extension that replaces the default new tab with a Markdown notes editor.
+          </p>
+          <div class="icons">
+            <img class="tech-icon" src="./assets/tech-icons/react-icon.png"/>
+            <img class="tech-icon" src="./assets/tech-icons/sass-icon.png"/>
+            <a href="https://chrome.google.com/webstore/detail/markdownnotestab/hifkkdafkbpclfibnmlnjbedibemdfhb" target="__blank" title="link to extension on extension store"><img class="tech-icon" src="./assets/tech-icons/chrome-icon.png"/></a>
+          </div>
+          <div class="portfolio-buttons">
+            <div>
+              <form method="get" action="https://www.marlocarreon.com/markdown-note-extension/" target="__blank"><button>Demo</button></form>
+            </div>
+            <div>
+              <img src="" alt="">
+              <a href="https://github.com/mcarreon/markdown-note-extension" target="__blank" title="Link to Markdown Notes Extension Github Repo">View Source</a>
+            </div>
+          </div>
+        </div>
+
+      </div>
+      <div class="portfolio-item">
+        <div>
           <a href="https://blitzreport.herokuapp.com/" target="__blank" title="Link to Blitz Report"><img src="./assets/imgs/blitz.jpg" alt="blitz report preview"></a>
         </div>
         <div class="portfolio-item-desc">
           <h4>Blitz Report</h4>
-          <p>A Fantasy Football utility webapp that allows users to track QB success rates against specific opponents.
+          <p>A Fantasy Football utility webapp that allows users to track QB success rates against specific opponents. Includes user login and encryption.
           </p>
-          <ul>
-            <li>Built with the React framework</li>
-            <li>Designed and produced mockups in AdobeXD</li>
-            <li>Used MongoDB, Express, and Node for the back end</li>
-            <li>User Authentication handled with Passport and BCrypt</li>
-          </ul>
+          <div class="icons">
+            <img class="tech-icon" src="./assets/tech-icons/react-icon.png" alt="react icon"/>
+            <img class="tech-icon" src="./assets/tech-icons/xd-icon.png" alt="adobeXD icon"/>
+            <img class="tech-icon" src="./assets/tech-icons/mongo-icon.jpg" alt="mongoDB icon"/>
+            <img class="tech-icon" src="./assets/tech-icons/node-icon.png" alt="node.js icon"/>
+            <img class="tech-icon" src="./assets/tech-icons/passport-icon.svg" alt="passport.js icon"/>
+          </div>
           <div class="portfolio-buttons">
             <div>
               <form method="get" action="https://blitzreport.herokuapp.com/" target="__blank"><button>Demo</button></form>
@@ -219,12 +243,12 @@
         </div>
         <div class="portfolio-item-desc">
           <h4>VanCool</h4>
-          <p>A web app to assist companies in creating and managing carpools.</p>
-          <ul>
-            <li>Built with Handlebars and routed with Express</li>
-            <li>Database built with Sequelize and MySQL</li>
-            <li>User Authentication with 3 permission levels</li>
-          </ul>
+          <p>A web console to assist companies in creating and scheduling carpools. Comes with user authentication and 3 permission levels.</p>
+          <div class="icons">
+            <img class="tech-icon" src="./assets/tech-icons/handlebars-icon.png" alt="handlebars icon"/>
+            <img class="tech-icon" src="./assets/tech-icons/mysql-icon.png" alt="react icon"/>
+            <img class="tech-icon" src="./assets/tech-icons/sass-icon.png" alt="sass icon"/>
+          </div>
           <div class="portfolio-buttons">
             <div>
               <form method="get" action="https://vancoolproject.herokuapp.com/" target="__blank"><button>Demo</button></form>
