added desktop only tag to chrome extension

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         </div>
         <div class="portfolio-item-desc">
           <h4>Markdown Notes Extension</h4>
-          <p>Chrome Extension that replaces the default new tab with a Markdown notes editor.
+          <p>Chrome Extension that replaces the default new tab with a Markdown notes editor. Optimized for desktop use only.
           </p>
           <div class="icons">
             <img class="tech-icon" src="./assets/tech-icons/react-icon.png"/>
